--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "mocha": "8.2.1",
     "npm-run-all": "4.1.5",
     "rxjs": "6.6.3",
+    "sass-resources-loader": "2.1.1",
     "spectron": "13.0.0",
     "ts-node": "9.1.0",
     "tslib": "2.0.3",
