--- a/package.json
+++ b/package.json
@@ -82,6 +82,8 @@
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.8",
     "eslint-plugin-prefer-arrow": "1.2.2",
+    "imagemin-jpegtran": "7.0.0",
+    "imagemin-pngquant": "9.0.1",
     "jasmine-core": "3.6.0",
     "jasmine-spec-reporter": "6.0.0",
     "karma": "~5.1.0",
