切换图片压缩插件版本

--- a/package.json
+++ b/package.json
@@ -45,7 +45,12 @@
     "@ngrx/effects": "11.0.1",
     "@ngrx/store": "11.0.1",
     "@ngrx/store-devtools": "11.0.1",
-    "imagemin": "7.0.1"
+    "imagemin": "6.0.0",
+    "imagemin-gifsicle": "6.0.1",
+    "imagemin-jpegtran": "6.0.0",
+    "imagemin-optipng": "6.0.0",
+    "imagemin-pngquant": "6.0.0",
+    "imagemin-svgo": "7.0.0"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "10.0.1",
@@ -67,7 +72,7 @@
     "@angular/router": "11.0.3",
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "6.0.0",
-    "@types/imagemin": "7.0.0",
+    "@types/imagemin": "6.0.0",
     "@types/jasmine": "3.6.2",
     "@types/jasminewd2": "2.0.8",
     "@types/mocha": "8.0.4",
@@ -75,6 +80,7 @@
     "@typescript-eslint/eslint-plugin": "4.7.0",
     "@typescript-eslint/eslint-plugin-tslint": "4.7.0",
     "@typescript-eslint/parser": "4.7.0",
+    "asar": "3.0.3",
     "chai": "4.2.0",
     "conventional-changelog-cli": "2.1.1",
     "core-js": "3.6.5",
@@ -86,8 +92,6 @@
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.8",
     "eslint-plugin-prefer-arrow": "1.2.2",
-    "imagemin-jpegtran": "7.0.0",
-    "imagemin-pngquant": "9.0.1",
     "jasmine-core": "3.6.0",
     "jasmine-spec-reporter": "6.0.0",
     "karma": "~5.1.0",
