--- a/.npmrc
+++ b/.npmrc
@@ -2,7 +2,7 @@ save=true
 save-exact=true
 registry=https://registry.npm.taobao.org
 NODEJS_ORG_MIRROR=https://npm.taobao.org/mirrors/node
-ELECTRON_MIRROR=https://npm.taobao.org/mirrors/electron
+ELECTRON_MIRROR=https://npm.taobao.org/mirrors/electron/
 arch=ia32
 target_arch=ia32
 msvs_version=2015
