--- a/package.json
+++ b/package.json
@@ -45,12 +45,11 @@
     "@ngrx/effects": "11.0.1",
     "@ngrx/store": "11.0.1",
     "@ngrx/store-devtools": "11.0.1",
-    "imagemin": "6.0.0",
-    "imagemin-gifsicle": "6.0.1",
-    "imagemin-jpegtran": "6.0.0",
-    "imagemin-optipng": "6.0.0",
-    "imagemin-pngquant": "6.0.0",
-    "imagemin-svgo": "7.0.0"
+    "crypto-js": "4.0.0",
+    "fs-extra": "9.1.0",
+    "imagemin": "7.0.0",
+    "imagemin-jpegoptim": "7.0.0",
+    "imagemin-pngquant": "9.0.1"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "10.0.1",
@@ -72,15 +71,16 @@
     "@angular/router": "11.0.3",
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "6.0.0",
-    "@types/imagemin": "6.0.0",
+    "@types/crypto-js": "4.0.1",
+    "@types/fs-extra": "8.0.1",
+    "@types/imagemin": "7.0.0",
     "@types/jasmine": "3.6.2",
     "@types/jasminewd2": "2.0.8",
     "@types/mocha": "8.0.4",
-    "@types/node": "12.12.6",
+    "@types/node": "12.20.4",
     "@typescript-eslint/eslint-plugin": "4.7.0",
     "@typescript-eslint/eslint-plugin-tslint": "4.7.0",
     "@typescript-eslint/parser": "4.7.0",
-    "asar": "3.0.3",
     "chai": "4.2.0",
     "conventional-changelog-cli": "2.1.1",
     "core-js": "3.6.5",
