--- a/tsconfig.serve.json
+++ b/tsconfig.serve.json
@@ -5,6 +5,7 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
     "target": "es5",
     "types": [
       "node"
@@ -13,6 +14,7 @@
     "paths": {
       "@common/*": ["common/*"],
       "@utils/*": ["utils/*"],
+      "@app/*": ["app/*"],
      },
     "lib": [
       "es2017",
