--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "ansi-escapes": "4.3.1",
     "chalk": "4.1.0",
     "crypto-js": "4.0.0",
+    "electron-log": "4.3.2",
+    "execa": "5.0.0",
     "fs-extra": "9.1.0",
     "imagemin": "7.0.0",
     "imagemin-jpegoptim": "7.0.0",
