fix: 修改 electron-log 引入方式

--- a/tsconfig.serve.json
+++ b/tsconfig.serve.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "module": "commonjs",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
