--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "module": "es2020",
+    "module": "commonjs",
     "baseUrl": "./src",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
