--- a/.npmrc
+++ b/.npmrc
@@ -3,3 +3,4 @@ save-exact=true
 registry=https://registry.npm.taobao.org
 NODEJS_ORG_MIRROR=https://npm.taobao.org/mirrors/node
 ELECTRON_MIRROR=https://npm.taobao.org/mirrors/electron/
+ELECTRON_BUILDER_BINARIES_MIRROR=http://npm.taobao.org/mirrors/electron-builder-binaries/
