--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "electron:serve": "wait-on tcp:4200 && npm run electron:serve-tsc && npx electron . --serve",
     "electron:local": "npm run build:prod && npx electron .",
     "electron:pack": "npm run build:prod && electron-builder --dir",
-    "electron:build": "npm run build:prod && electron-builder -mw",
+    "electron:build": "npm run build:prod && electron-builder build",
+    "debug": "electron-builder -wm",
+    "release": "electron-builder  --publish always",
     "test": "ng test --watch=false",
     "test:watch": "ng test",
     "e2e": "npm run build:prod && cross-env TS_NODE_PROJECT='e2e/tsconfig.e2e.json' mocha --timeout 300000 --require ts-node/register e2e/**/*.e2e.ts",
@@ -56,7 +58,7 @@
     "electron-log": "4.3.2",
     "execa": "5.0.0",
     "fs-extra": "9.1.0",
-    "ng-zorro-antd": "11.2.0",
+    "ng-zorro-antd": "11.4.0",
     "wrap-ansi": "7.0.0"
   },
   "devDependencies": {
