--- a/.yarnrc
+++ b/.yarnrc
@@ -1,6 +1,6 @@
 save true
 save-exact true
 registry "https://registry.npm.taobao.org"
-NODEJS_ORG_MIRROR "https://npm.taobao.org/mirrors/node"
-ELECTRON_MIRROR "https://npm.taobao.org/mirrors/electron"
-ELECTRON_BUILDER_BINARIES_MIRROR "https://npm.taobao.org/mirrors/electron-builder-binaries"
+NODEJS_ORG_MIRROR "https://npm.taobao.org/mirrors/node/"
+ELECTRON_MIRROR "https://npm.taobao.org/mirrors/electron/"
+ELECTRON_BUILDER_BINARIES_MIRROR "https://npm.taobao.org/mirrors/electron-builder-binaries/"
