feat: 添加@assets别名

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     ],
     "paths": {
       "@common/*": ["common/*"],
+      "@assets/*": ["assets/*"],
       "@utils/*": ["utils/*"],
       "@app/*": ["app/*"],
      },
