--- a/tsconfig.serve.json
+++ b/tsconfig.serve.json
@@ -14,6 +14,7 @@
     "baseUrl": "./src",
     "paths": {
       "@common/*": ["common/*"],
+      "@assets/*": ["assets/*"],
       "@utils/*": ["utils/*"],
       "@app/*": ["app/*"],
      },
