--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ install:
   - npm install
 script:
   - ng lint
-  - if [ "$TRAVIS_OS_NAME" != "windows" ]; then npm run test ; fi
-  - if [ "$TRAVIS_OS_NAME" != "windows" ]; then npm run e2e ; fi
+  - npm run test
+  - npm run e2e
   - npm run build
