--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -19,7 +19,7 @@ jobs:
   build:
     strategy:
       matrix:
-        node-version: [10.13.0, 12.x, 14.x, 15.x]
+        node-version: [10.13.0, 12.x, 14.x]
 
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -46,20 +46,20 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Install Dependencies
-      run: npm i
+      run: yarn
 
     - name: Check lint
-      run: npm run lint
+      run: yarn lint
 
     - name: Build the app
-      run: npm run electron:build
+      run: yarn electron:build
 
     - name: Run headless unit test
       uses: GabrielBB/xvfb-action@v1
       with:
-        run: npm test
+        run: yarn test
 
     - name: Run headless unit test
       uses: GabrielBB/xvfb-action@v1
       with:
-        run: npm run e2e
+        run: yarn e2e
