--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -19,7 +19,7 @@ jobs:
   build:
     strategy:
       matrix:
-        node-version: [12.18.0, 14.x, 15.x]
+        node-version: [12.18.0]
 
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
