--- a/package.json
+++ b/package.json
@@ -45,81 +45,81 @@
     "lint": "ng lint"
   },
   "dependencies": {
-    "@angular/animations": "11.2.10",
-    "@ngrx/effects": "11.1.0",
-    "@ngrx/store": "11.1.0",
-    "@ngrx/store-devtools": "11.1.0",
+    "@angular/animations": "11.0.3",
+    "@ngrx/effects": "11.0.1",
+    "@ngrx/store": "11.0.1",
+    "@ngrx/store-devtools": "11.0.1",
     "@types/ansi-escapes": "4.0.0",
     "@types/chalk": "2.2.0",
     "@types/wrap-ansi": "3.0.0",
-    "ansi-escapes": "4.3.2",
+    "ansi-escapes": "4.3.1",
     "chalk": "4.1.0",
     "crypto-js": "4.0.0",
-    "electron-log": "4.3.4",
+    "electron-log": "4.3.2",
     "execa": "5.0.0",
     "fs-extra": "9.1.0",
     "ng-zorro-antd": "11.4.0",
     "wrap-ansi": "7.0.0"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "11.1.1",
+    "@angular-builders/custom-webpack": "10.0.1",
     "@angular-devkit/build-angular": "0.1102.9",
-    "@angular-eslint/builder": "2.1.0",
-    "@angular-eslint/eslint-plugin": "2.1.0",
-    "@angular-eslint/eslint-plugin-template": "2.1.0",
-    "@angular-eslint/schematics": "2.1.0",
-    "@angular-eslint/template-parser": "2.1.0",
-    "@angular/cli": "11.2.9",
-    "@angular/common": "11.2.10",
-    "@angular/compiler": "11.2.10",
-    "@angular/compiler-cli": "11.2.10",
-    "@angular/core": "11.2.10",
-    "@angular/forms": "11.2.10",
-    "@angular/language-service": "11.2.10",
-    "@angular/platform-browser": "11.2.10",
-    "@angular/platform-browser-dynamic": "11.2.10",
-    "@angular/router": "11.2.10",
+    "@angular-eslint/builder": "0.8.0-beta.3",
+    "@angular-eslint/eslint-plugin": "0.8.0-beta.3",
+    "@angular-eslint/eslint-plugin-template": "0.8.0-beta.3",
+    "@angular-eslint/schematics": "0.8.0-beta.3",
+    "@angular-eslint/template-parser": "0.8.0-beta.3",
+    "@angular/cli": "11.0.3",
+    "@angular/common": "11.0.3",
+    "@angular/compiler": "11.0.3",
+    "@angular/compiler-cli": "11.0.3",
+    "@angular/core": "11.0.3",
+    "@angular/forms": "11.0.3",
+    "@angular/language-service": "11.0.3",
+    "@angular/platform-browser": "11.0.3",
+    "@angular/platform-browser-dynamic": "11.0.3",
+    "@angular/router": "11.0.3",
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "6.0.0",
     "@types/crypto-js": "4.0.1",
-    "@types/fs-extra": "9.0.11",
+    "@types/fs-extra": "8.0.1",
     "@types/imagemin": "7.0.0",
-    "@types/jasmine": "3.6.9",
+    "@types/jasmine": "3.6.2",
     "@types/jasminewd2": "2.0.8",
-    "@types/mocha": "8.2.2",
-    "@types/node": "14.14.41",
-    "@typescript-eslint/eslint-plugin": "4.22.0",
-    "@typescript-eslint/eslint-plugin-tslint": "4.22.0",
-    "@typescript-eslint/parser": "4.22.0",
-    "chai": "4.3.4",
+    "@types/mocha": "8.0.4",
+    "@types/node": "12.20.4",
+    "@typescript-eslint/eslint-plugin": "4.7.0",
+    "@typescript-eslint/eslint-plugin-tslint": "4.7.0",
+    "@typescript-eslint/parser": "4.7.0",
+    "chai": "4.2.0",
     "conventional-changelog-cli": "2.1.1",
-    "core-js": "3.10.1",
-    "cross-env": "7.0.3",
-    "electron": "12.0.4",
-    "electron-builder": "22.10.5",
+    "core-js": "3.6.5",
+    "cross-env": "7.0.2",
+    "electron": "11.0.3",
+    "electron-builder": "22.9.1",
     "electron-reload": "1.5.0",
-    "eslint": "7.24.0",
+    "eslint": "7.13.0",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "32.3.0",
-    "eslint-plugin-prefer-arrow": "1.2.3",
-    "jasmine-core": "3.7.1",
-    "jasmine-spec-reporter": "7.0.0",
-    "karma": "~6.3.2",
+    "eslint-plugin-jsdoc": "30.7.8",
+    "eslint-plugin-prefer-arrow": "1.2.2",
+    "jasmine-core": "3.6.0",
+    "jasmine-spec-reporter": "6.0.0",
+    "karma": "~5.1.0",
     "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-electron": "7.0.0",
+    "karma-electron": "6.3.1",
     "karma-jasmine": "4.0.1",
     "karma-jasmine-html-reporter": "1.5.4",
-    "mocha": "8.3.2",
+    "mocha": "8.2.1",
     "npm-run-all": "4.1.5",
-    "rxjs": "6.6.7",
-    "sass-resources-loader": "2.2.1",
-    "spectron": "14.0.0",
-    "ts-node": "9.1.1",
-    "tslib": "2.2.0",
-    "typescript": "4.2.4",
-    "wait-on": "5.3.0",
-    "webdriver-manager": "12.1.8",
-    "zone.js": "0.11.4"
+    "rxjs": "6.6.3",
+    "sass-resources-loader": "2.1.1",
+    "spectron": "13.0.0",
+    "ts-node": "9.1.0",
+    "tslib": "2.0.3",
+    "typescript": "4.0.5",
+    "wait-on": "5.0.1",
+    "webdriver-manager": "12.1.7",
+    "zone.js": "0.10.3"
   },
   "engines": {
     "node": ">=12.18.0"
