--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "electron:serve": "wait-on tcp:4200 && npm run electron:serve-tsc && npx electron . --serve",
     "electron:local": "npm run build:prod && npx electron .",
     "electron:pack": "npm run build:prod && electron-builder --dir",
-    "electron:build": "electron-builder build",
+    "electron:build": "npm run build:prod && electron-builder build --publish=never",
     "debug": "electron-builder -wm",
     "release": "electron-builder  --publish always",
     "test": "ng test --watch=false",
