--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -48,5 +48,5 @@ jobs:
       run: yarn
     - name: Check lint
       run: yarn lint
-    - name: Build the app
-      run: yarn electron:build
+    # - name: Build the app
+      # run: yarn electron:build
