ci: 新增Releases published

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -64,3 +64,6 @@ jobs:
         
     - name: Build the app
       run: yarn electron:build
+
+    - name: Releases published
+      run: yarn release
