--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -13,8 +13,8 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-env: 
-  GH_TOKEN: ${{ secrets.GH_TOKEN  }}
+# env: 
+#   GH_TOKEN: ${{ secrets.GH_TOKEN  }}
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
@@ -65,5 +65,5 @@ jobs:
     - name: Build the app
       run: yarn electron:build
 
-    - name: Releases published
-      run: yarn release
+    # - name: Releases published
+    #   run: yarn release
