--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "electron-log": "4.3.2",
     "execa": "5.0.0",
     "fs-extra": "9.1.0",
+    "husky": "^6.0.0",
     "ng-zorro-antd": "11.4.0",
     "wrap-ansi": "7.0.0"
   },
