--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
     "test:watch": "ng test",
     "e2e": "npm run build:prod && cross-env TS_NODE_PROJECT='e2e/tsconfig.e2e.json' mocha --timeout 300000 --require ts-node/register e2e/**/*.e2e.ts",
     "version": "conventional-changelog -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "pretty-quick": "pretty-quick --staged",
+    "prettier": "prettier -c --write '**/*'",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@angular/animations": "11.0.3",
@@ -60,6 +63,7 @@
     "fs-extra": "9.1.0",
     "husky": "^6.0.0",
     "ng-zorro-antd": "11.4.0",
+    "pretty-quick": "^3.1.0",
     "wrap-ansi": "7.0.0"
   },
   "devDependencies": {
@@ -80,6 +84,8 @@
     "@angular/platform-browser": "11.0.3",
     "@angular/platform-browser-dynamic": "11.0.3",
     "@angular/router": "11.0.3",
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "6.0.0",
     "@types/crypto-js": "4.0.1",
@@ -103,6 +109,7 @@
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.8",
     "eslint-plugin-prefer-arrow": "1.2.2",
+    "husky": "^6.0.0",
     "jasmine-core": "3.6.0",
     "jasmine-spec-reporter": "6.0.0",
     "karma": "~5.1.0",
@@ -112,6 +119,7 @@
     "karma-jasmine-html-reporter": "1.5.4",
     "mocha": "8.2.1",
     "npm-run-all": "4.1.5",
+    "prettier": "^2.2.1",
     "rxjs": "6.6.3",
     "sass-resources-loader": "2.1.1",
     "spectron": "13.0.0",
