--- a/.github/workflows/lint-test-e2e-build.yml
+++ b/.github/workflows/lint-test-e2e-build.yml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-name: 'Linux Build'
+name: 'lint-test-e2e-build'
 
 # Controls when the action will run.
 on:
@@ -13,39 +13,38 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-# env: 
-#   GH_TOKEN: ${{ secrets.GH_TOKEN  }}
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
     strategy:
       matrix:
-        node-version: [12.18.0]
+        node-version: [12.x]
+        os: ['ubuntu-latest', 'windows-latest', 'macos-latest']
 
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v2
 
-    - name: Cache node modules
-      uses: actions/cache@v2
-      env:
-        cache-name: cache-node-modules
+    - name: Get yarn cache directory path
+      id: yarn-cache-dir-path
+      run: echo "::set-output name=dir::$(yarn cache dir)"
+
+    - uses: actions/cache@v2
+      id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
       with:
-        # npm cache files are stored in `~/.npm` on Linux/macOS
-        path: ~/.npm
-        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
         restore-keys: |
-          ${{ runner.os }}-build-${{ env.cache-name }}-
-          ${{ runner.os }}-build-
-          ${{ runner.os }}-
+          ${{ runner.os }}-yarn-
 
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-
+        
     - name: Install Dependencies
       run: yarn
 
@@ -53,17 +52,16 @@ jobs:
       run: yarn lint
 
     - name: Run headless unit test
+      if: matrix.os == 'ubuntu-latest'
       uses: GabrielBB/xvfb-action@v1
       with:
-        run: yarn test
+        run: |
+          yarn test
+          yarn e2e
 
     - name: Run headless unit test
-      uses: GabrielBB/xvfb-action@v1
+      if: matrix.os !== 'ubuntu-latest'
       with:
-        run: yarn e2e
-        
-    - name: Build the app
-      run: yarn electron:build
-
-    # - name: Releases published
-    #   run: yarn release
+        run: |
+          yarn test
+          yarn e2e
