--- a/.github/workflows/lint-test-e2e-build.yml
+++ b/.github/workflows/lint-test-e2e-build.yml
@@ -21,7 +21,7 @@ jobs:
         node-version: [12.x]
         os: ['ubuntu-latest', 'windows-latest', 'macos-latest']
     # The type of runner that the job will run on
-    runs-on: ${{ matrix.os }}
+    runs-on: 'ubuntu-latest'
     steps:
       - uses: actions/checkout@v2
       - name: Get yarn cache directory path
