--- a/.github/workflows/lint-test-e2e-build.yml
+++ b/.github/workflows/lint-test-e2e-build.yml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-name: 'Terminal build more'
+name: Terminal build more
 
 # Controls when the action will run.
 on:
