--- a/.github/workflows/lint-test-e2e-build.yml
+++ b/.github/workflows/lint-test-e2e-build.yml
@@ -15,9 +15,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
+
       - uses: actions/cache@v2
         id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
         with:
@@ -25,7 +27,7 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-
+            
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -33,18 +35,17 @@ jobs:
 
       - name: Install Dependencies
         run: yarn
+
       - name: Check lint
         run: yarn lint
+
       - name: Run headless unit test
         uses: GabrielBB/xvfb-action@v1
         with:
-          run: |
-            yarn test
-            yarn e2e
-        if: matrix.os == 'ubuntu-latest'
-      - name: Run headless unit test
+          run: yarn test
+
+      - name: Run headless unit e2e
+        uses: GabrielBB/xvfb-action@v1
         with:
-          run: |
-            yarn test
-            yarn e2e
-        if: matrix.os !== 'ubuntu-latest'
+          run: yarn e2e
+            
