ci:  新增 yarn ci

--- a/.github/workflows/lint-test-e2e-build.yml
+++ b/.github/workflows/lint-test-e2e-build.yml
@@ -42,5 +42,5 @@ jobs:
       - name: Run headless unit test and e2e
         uses: GabrielBB/xvfb-action@v1
         with:
-          run: yarn test && yarn e2e
+          run: yarn ci
             
