--- a/angular.json
+++ b/angular.json
@@ -16,13 +16,8 @@
             "main": "src/main.ts",
             "tsConfig": "src/tsconfig.app.json",
             "polyfills": "src/polyfills.ts",
-            "allowedCommonJsDependencies":[
-              "fs-extra",
-              "crypto-js/md5"
-            ],
-            "assets": [
-              "src/assets"
-            ],
+            "allowedCommonJsDependencies": ["fs-extra", "crypto-js/md5"],
+            "assets": ["src/assets"],
             "styles": [
               "node_modules/ng-zorro-antd/style/index.min.css",
               "src/styles.less"
@@ -116,25 +111,24 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "scripts": [],
-            "styles": [
-              "src/styles.less"
-            ],
-            "assets": [
-              "src/assets"
-            ],
+            "styles": ["src/styles.less"],
+            "assets": ["src/assets"],
             "customWebpackConfig": {
               "path": "./angular.webpack.js"
-            }
+            },
+            "fileReplacements": [
+              {
+                "replace": "src/environments/environment.ts",
+                "with": "src/environments/environment.test.ts"
+              }
+            ]
           }
         },
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
             "eslintConfig": ".eslintrc.json",
-            "lintFilePatterns": [
-              "src/**.ts",
-              "main.ts"
-            ]
+            "lintFilePatterns": ["src/**.ts", "main.ts"]
           }
         }
       }
@@ -147,9 +141,7 @@
           "builder": "@angular-eslint/builder:lint",
           "options": {
             "eslintConfig": ".eslintrc.json",
-            "lintFilePatterns": [
-              "e2e/**.ts"
-            ]
+            "lintFilePatterns": ["e2e/**.ts"]
           }
         }
       }
