--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "electron:local": "npm run build:prod && npx electron .",
     "electron:pack": "npm run build:prod && electron-builder --dir",
     "electron:build": "npm run build:prod && electron-builder build",
-    "debug": "electron-builder -wm",
+    "debug": "electron-builder build",
     "release": "electron-builder  --publish always",
     "test": "ng test --watch=false",
     "test:watch": "ng test",
@@ -64,6 +64,7 @@
     "husky": "^6.0.0",
     "ng-zorro-antd": "11.4.0",
     "pretty-quick": "^3.1.0",
+    "sharp": "0.28.1",
     "wrap-ansi": "7.0.0"
   },
   "devDependencies": {
