--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "electron-log": "4.3.2",
     "execa": "5.0.0",
     "fs-extra": "9.1.0",
-    "husky": "^6.0.0",
     "ng-zorro-antd": "11.4.0",
     "pretty-quick": "^3.1.0",
     "sharp": "0.28.1",
@@ -110,7 +109,7 @@
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.8",
     "eslint-plugin-prefer-arrow": "1.2.2",
-    "husky": "^6.0.0",
+    "husky": "6.0.0",
     "jasmine-core": "3.6.0",
     "jasmine-spec-reporter": "6.0.0",
     "karma": "~5.1.0",
