--- a/.prettierrc
+++ b/.prettierrc
@@ -1,17 +1,25 @@
 {
-  "tabWidth": 2, //---------
-  "useTabs": false, // 使用tab缩进，默认false
-  "singleQuote": true, // 使用分号, 默认true
-  "trailingComma": "all", //es5 包括es5中的数组、对象  all 包括函数对象等所有可选
-  "printWidth": 120,
-  "bracketSpacing": true, //对象中的空格 默认true
-  "arrowParens": "avoid", // avoid 能省略括号的时候就省略 例如x => x always 总是有括号
+  "singleQuote": true,
+  "useTabs": false,
+  "printWidth": 140,
+  "tabWidth": 2,
+  "semi": true,
+  "htmlWhitespaceSensitivity": "ignore",
+  "arrowParens": "avoid",
+  "bracketSpacing": true,
+  "proseWrap": "preserve",
+  "trailingComma": "none",
   "overrides": [
     {
-      //忽略文件
       "files": ".prettierrc",
       "options": {
         "parser": "json"
+      }
+    },
+    {
+      "files": "*.html",
+      "options": {
+        "printWidth": 100
       }
     }
   ]
