--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,12 @@
     "module": "commonjs",
     "baseUrl": "./src",
     "outDir": "./dist/out-tsc",
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "downlevelIteration": true,
+    "importHelpers": true,
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
@@ -11,35 +17,25 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "typeRoots": ["node_modules/@types"],
     "paths": {
       "@common/*": ["common/*"],
       "@assets/*": ["assets/*"],
       "@utils/*": ["utils/*"],
-      "@app/*": ["app/*"],
-     },
-    "lib": [
-      "es2017",
-      "es2016",
-      "es2015",
-      "dom"
-    ]
+      "@app/*": ["app/*"]
+    },
+    "lib": ["es2017", "es2016", "es2015", "dom"]
   },
+
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
-    "strictmetadataemit": true
+    "strictmetadataemit": true,
+    "enableI18nLegacyMessageIdFormat": false,
+    "strictInjectionParameters": true,
+    "strictInputAccessModifiers": true,
+    "strictTemplates": true
   },
-  "files": [
-    "src/main.ts",
-    "src/polyfills.ts"
-  ],
-  "include": [
-    "src/**/*.d.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "!src/assets/**/*.js"
-  ]
+  "files": ["src/main.ts", "src/polyfills.ts"],
+  "include": ["src/**/*.d.ts"],
+  "exclude": ["node_modules", "!src/assets/**/*.js"]
 }
