--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "mac",
     "linux"
   ],
+  "resolutions": {
+    "electron-builder/**/app-builder-bin": "3.5.13"
+  },
   "main": "main.js",
   "private": true,
   "scripts": {
@@ -35,8 +38,8 @@
     "electron:serve": "wait-on tcp:4200 && npm run electron:serve-tsc && npx electron . --serve",
     "electron:local": "npm run build:prod && npx electron .",
     "electron:pack": "npm run build:prod && electron-builder --dir",
-    "electron:build": "npm run build:prod && electron-builder build",
-    "debug": "electron-builder build",
+    "electron:build": "npm run build:prod && npm run electron:serve-tsc && electron-builder build",
+    "debug": "npm run electron:serve-tsc && electron-builder build",
     "release": "electron-builder  --publish always",
     "test": "ng test --watch=false",
     "test:watch": "ng test",
@@ -48,6 +51,18 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "crypto-js": "4.0.0",
+    "electron-log": "4.3.2",
+    "execa": "5.0.0",
+    "fs-extra": "9.1.0",
+    "sharp": "^0.28.1"
+  },
+  "devDependencies": {
+    "wrap-ansi": "7.0.0",
+    "pretty-quick": "^3.1.0",
+    "ng-zorro-antd": "11.4.0",
+    "chalk": "4.1.0",
+    "ansi-escapes": "4.3.1",
     "@angular/animations": "11.0.3",
     "@ngrx/effects": "11.0.1",
     "@ngrx/store": "11.0.1",
@@ -55,18 +70,6 @@
     "@types/ansi-escapes": "4.0.0",
     "@types/chalk": "2.2.0",
     "@types/wrap-ansi": "3.0.0",
-    "ansi-escapes": "4.3.1",
-    "chalk": "4.1.0",
-    "crypto-js": "4.0.0",
-    "electron-log": "4.3.2",
-    "execa": "5.0.0",
-    "fs-extra": "9.1.0",
-    "ng-zorro-antd": "11.4.0",
-    "pretty-quick": "^3.1.0",
-    "sharp": "^0.28.1",
-    "wrap-ansi": "7.0.0"
-  },
-  "devDependencies": {
     "@angular-builders/custom-webpack": "10.0.1",
     "@angular-devkit/build-angular": "0.1102.9",
     "@angular-eslint/builder": "0.8.0-beta.3",
@@ -95,6 +98,7 @@
     "@types/jasminewd2": "2.0.8",
     "@types/mocha": "8.0.4",
     "@types/node": "12.20.4",
+    "@types/sharp": "0.28.0",
     "@typescript-eslint/eslint-plugin": "4.7.0",
     "@typescript-eslint/eslint-plugin-tslint": "4.7.0",
     "@typescript-eslint/parser": "4.7.0",
