--- a/.github/workflows/test-action-release.yml
+++ b/.github/workflows/test-action-release.yml
@@ -1,11 +1,13 @@
-name: 'Test action release'
+name: 'test action release'
 on:
   # [create]
+
   push:
     branches: [ dev ]
   workflow_dispatch:
 jobs:
   release:
+    name: release on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -18,7 +20,7 @@ jobs:
       - name: Use Node.js 
         uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 12.18.0
 
       #https://github.com/samuelmeuli/action-electron-builder
       - name: release
