--- a/.github/workflows/lint-test-e2e-build.yml
+++ b/.github/workflows/lint-test-e2e-build.yml
@@ -39,8 +39,8 @@ jobs:
       - name: Check lint
         run: npm run lint
 
-      - name: Run headless unit test
-        uses: GabrielBB/xvfb-action@v1
-        with:
-          run: npm run test
+      # - name: Run headless unit test
+      #   uses: GabrielBB/xvfb-action@v1
+      #   with:
+      #     run: npm run test
             
