--- a/angular.json
+++ b/angular.json
@@ -12,7 +12,7 @@
         "build": {
           "builder": "@angular-builders/custom-webpack:browser",
           "options": {
-            "outputPath": "dist",
+            "outputPath": "dist/renderer",
             "index": "src/renderer/index.html",
             "main": "src/renderer/main.ts",
             "tsConfig": "src/renderer/tsconfig.app.json",
