--- a/src/renderer/tsconfig.app.json
+++ b/src/renderer/tsconfig.app.json
@@ -1,22 +1,5 @@
 {
   "extends": "../../tsconfig.json",
-  "compilerOptions": {
-    "outDir": "../../out-tsc/app",
-    "module": "es2015",
-    "baseUrl": "",
-    "types": [],
-    "paths": {
-      "@common/*": ["../common/*"],
-      "@assets/*": ["../assets/*"],
-      "@utils/*": ["utils/*"],
-      "@app/*": ["app/*"]
-    }
-  },
-  "include": ["main.ts", "polyfill.ts"],
-  "exclude": ["**/*.spec.ts"],
-  "angularCompilerOptions": {
-    "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true,
-    "preserveWhitespaces": true
-  }
+  "files": ["main.ts", "polyfills.ts"],
+  "exclude": ["**/*.spec.ts"]
 }
