--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,13 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "esnext",
+    "target": "esnext",
     "baseUrl": "./src",
     "outDir": "./dist/out-tsc",
+    "suppressImplicitAnyIndexErrors": true,
+    "noUnusedLocals": true,
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitReturns": true,
@@ -16,7 +20,6 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "es5",
     "typeRoots": ["node_modules/@types"],
     "paths": {
       "@common/*": ["common/*"],
@@ -24,9 +27,8 @@
       "@utils/*": ["renderer/utils/*"],
       "@app/*": ["renderer/app/*"]
     },
-    "lib": ["es2017", "es2016", "es2015", "dom"]
+    "lib": ["esnext", "dom"]
   },
-
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictmetadataemit": true,
@@ -35,6 +37,5 @@
     "strictInputAccessModifiers": true,
     "strictTemplates": true
   },
-  "files": ["src/renderer/main.ts", "src/renderer/polyfills.ts"],
-  "exclude": ["node_modules", "!src/assets/**/*.js"]
+  "exclude": ["node_modules", "!src/assets/**/*.js", "src/Extensions"]
 }
