chore: noUnusedLocals add

--- a/src/renderer/tsconfig.app.json
+++ b/src/renderer/tsconfig.app.json
@@ -1,5 +1,8 @@
 {
   "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "noUnusedLocals": false
+  },
   "files": ["main.ts", "polyfills.ts"],
   "exclude": ["**/*.spec.ts"]
 }
