--- a/src/renderer/tsconfig.app.json
+++ b/src/renderer/tsconfig.app.json
@@ -3,6 +3,14 @@
   "compilerOptions": {
     "noUnusedLocals": false
   },
+  "angularCompilerOptions": {
+    "fullTemplateTypeCheck": true,
+    "strictmetadataemit": true,
+    "enableI18nLegacyMessageIdFormat": false,
+    "strictInjectionParameters": true,
+    "strictInputAccessModifiers": true,
+    "strictTemplates": true
+  },
   "files": ["main.ts", "polyfills.ts"],
   "exclude": ["**/*.spec.ts"]
 }
