ci: husky commit-msg

--- a/package.json
+++ b/package.json
@@ -78,8 +78,8 @@
     "@angular/platform-browser": "11.2.12",
     "@angular/platform-browser-dynamic": "11.2.12",
     "@angular/router": "11.2.12",
-    "@commitlint/cli": "^12.1.1",
-    "@commitlint/config-conventional": "^12.1.1",
+    "@commitlint/cli": "13.2.1",
+    "@commitlint/config-conventional": "13.2.0",
     "@etanjs/cli": "1.0.3",
     "@ngrx/effects": "11.1.1",
     "@ngrx/store": "11.1.1",
