feat: feat set env

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build:dev": "npm run ng:build -- -c dev",
     "build:prod": "npm run  ng:build  -- -c production",
     "electron:tsc": "tsc -p tsconfig.serve.json",
-    "electron:serve": "wait-on tcp:4200 && cross-env XDG_CURRENT_DESKTOP='serve' etan start -w",
+    "electron:serve": "wait-on tcp:4200 && etan start -w",
     "electron:local": "npm run build:prod && npx electron .",
     "electron:pack": "npm run build:prod && etan build --dir",
     "electron:build": "npm run build && etan build",
@@ -54,6 +54,7 @@
     "@etanjs/node-find-files": "1.0.3",
     "@types/chai": "4.2.22",
     "crypto-js": "4.0.0",
+    "dotenv": "9.0.2",
     "electron-updater": "4.3.9",
     "execa": "5.0.0",
     "fs-extra": "9.1.0",
