--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "test:watch": "ng test",
     "e2e": "cross-env TS_NODE_PROJECT='e2e/tsconfig.e2e.json' mocha --timeout 300000 --require ts-node/register e2e/**/*.e2e.ts",
     "version": "conventional-changelog -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
-    "lint": "ng lint",
-    "pretty-quick": "pretty-quick --staged",
-    "prettier": "prettier -c --write '**/*'",
+    "lint": "npm run lint:ts && npm run lint:less",
+    "lint:ts": "ng lint --fix",
+    "lint:less": "stylelint \"src/**/*.less\" --fix",
     "prepare": "husky install",
     "help": "etan build --publish always"
   },
@@ -58,7 +58,8 @@
     "electron-updater": "4.3.9",
     "execa": "5.0.0",
     "fs-extra": "9.1.0",
-    "sharp": "0.29.1"
+    "sharp": "0.29.1",
+    "stylelint-scss": "4.0.1"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "11.1.1",
@@ -131,6 +132,13 @@
     "rxjs": "6.6.7",
     "sass-resources-loader": "2.2.1",
     "spectron": "14.0.0",
+    "stylelint": "14.1.0",
+    "stylelint-config-rational-order": "0.1.2",
+    "stylelint-config-recommended-scss": "5.0.2",
+    "stylelint-config-standard": "24.0.0",
+    "stylelint-declaration-block-no-ignored-properties": "2.5.0",
+    "stylelint-less": "1.0.1",
+    "stylelint-order": "5.0.0",
     "ts-node": "9.1.1",
     "tslib": "2.2.0",
     "typescript": "4.1.5",
