--- a/src/renderer/tsconfig.spec.json
+++ b/src/renderer/tsconfig.spec.json
@@ -2,10 +2,8 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/spec",
-    "module": "commonjs",
-    "types": ["jasmine", "node"]
+    "types": ["jasmine"]
   },
   "files": ["test.ts", "polyfills-test.ts"],
-  "include": ["**/*.spec.ts", "**/*.d.ts"],
-  "exclude": ["dist", "release", "node_modules"]
+  "include": ["./**/*.spec.ts", "./**/*.d.ts"]
 }
